--- a/sample.env
+++ b/sample.env
@@ -1,19 +1,19 @@
 # api id and api hash (my.telegram.org)
 # required
-API_ID=''
-API_HASH=''
+API_ID='4228076'
+API_HASH='b4b4681b8f675b068fcd21de8d1e8f3a'
 
 # pyrogram session string (@genstr_robot)
 # required
-SESSION=''
+SESSION='BQCgy5i604-o6FlME7kXXIe6lMdqBFByRcaSi8SK-dgiZg9RpLmc0GlaIb7tUWVFj46vu9gyF1WIwIf_1sm9va2yeuWPobmQ3yhnwe0Yl95ke1GuaA2lCa8QO_jWDdZShjbAQpK7xehnvohZtckazxIg1_zk9iZ5T6ftAzL6Y3B76LtDI6V0x40Err5TUwGUYaBIO8asOWVy-g_NzK8BH3VQv-OHYHwjBbaCkKJqI_-KqlXgPa5anb-ym8thOAykxycy0VK-kqONKLlxe689zRIQQS_JW02j9RJ6tz6pVUPvB0VJ9oQCdr4YohOXZu-WeEiPznai6_im7ZZf35wKmgxjAAAAATfK3c8A'
 
 # telegram bot token (from @botfather)
 #optional
-BOT_TOKEN=''
+BOT_TOKEN='5264022386:AAHdYTw3VKis7oIkTQVZ0amNrGg2ifTZ6zQ'
 
 # sudo user ids (separate with space)
 # optional
-SUDOERS=''
+SUDOERS='5231009231'
 
 # command prefix (separate with space)
 # optional
