--- a/.env
+++ b/.env
@@ -37,5 +37,5 @@ ADMINS_ONLY='False'
 
 # spotify vars (for playing spotify links or playlist)
 # optional
-SPOTIFY_CLIENT_ID=''
-SPOTIFY_CLIENT_SECRET=''
+SPOTIFY_CLIENT_ID='df4a39484f904b81895c7ef78a70e0e8'
+SPOTIFY_CLIENT_SECRET='6d99a1b166b74b4a869e43c6030a3b83'
